Fixing image on mobile

--- a/style.css
+++ b/style.css
@@ -946,21 +946,21 @@ p {
         bottom: 260px;
     }
     .aci-server {
-        bottom: 319px;
-        right: -2px;
+        bottom: 295px;
+        right: -16px;
     }
     .aci-cloud-green {
-        bottom: 318px;
-        left: 218px;
+        bottom: 293px;
+        left: 242px;
     }
     .aci-cloud-server-2 {
         left: 165px;
     }
     .aci-cloud-grey {
-        left: 124px;
+        left: 132px;
     }
     .aci-cloud-green-2 {
-        right: 146px;
+        right: 125px;
     }
     .aci-cloud-grey-2 {
         right: 247px;
